--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap">
+
     <link href="CSS/index.css" rel="stylesheet" type="text/css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +32,7 @@
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 </head>
-
+<!--
 <body>
     <div class="modal_background">
         <div class="modal">
@@ -46,186 +48,185 @@
                 <label for="name">Download Successful</label>
                 <p>Thank you for wanting to see my Resume!</h3>
                 <p class=smalltext> This file has been downloaded to your computer.</p>
-            </div>
-        </div>
-        <div class="wholepage On">
-            <header>
-                <div class="TopBar"></div>
-                <nav>
-                    <a href="./index.html"><img id="logo" src="./Images/Websitesigniture_v1.png" href="./index.html"
-                            alt="TRohan Logo">
-                    </a>
-                    <ul class="nav">
-                        <il> <a id="Home" class="UxNavBar" href="./index.html">Home</a></il>
+            </div>--->
+</div>
+<div class="wholepage On">
+    <header>
+        <div class="TopBar"></div>
+        <nav>
+            <a href="./index.html"><img id="logo" src="./Images/Websitesigniture_v1.png" href="./index.html"
+                    alt="TRohan Logo">
+            </a>
+            <ul class="nav">
+                <il> <a id="Home" class="UxNavBar" href="./index.html">Home</a></il>
 
-                        <il><a id="About" class="UxNavBar" href="#">About</a></il>
+                <il><a id="About" class="UxNavBar" href="#">About</a></il>
 
-                        <il><a id="Casestudies" class="UxNavBar" href="./Casestudies/index.html">Case Studies</a>
-                        </il>
+                <il><a id="Casestudies" class="UxNavBar" href="./Casestudies/index.html">Case Studies</a>
+                </il>
 
-                        <il><a id="Industrial" class="UxNavBar" href="#">Industrial Design</a></il>
+                <il><a id="Industrial" class="UxNavBar" href="#">Industrial Design</a></il>
 
-                        <img class="Industrialarrow" src="./Images/industrialarrow.svg">
-                    </ul>
-                </nav>
-            </header>
-            <section class="HeroPage">
-                <main>
-                    <H2>Hi there</H2>
-                    <p>Welcome to my website. </p>
-                    <h4>My name is Tara,</h4>
-                    <p>Multidisciplinary designer that specialises in industrial design and User experience. I am
-                        passionate
-                        about
-                        creating beautifully useful designs that are made for the user. </p>
-                    <h4>Skills Include...</h4>
-                    <p>Human Centered Design Research.
-                    <p>Concept development.</p>
-                    <p>Visual prototyping and wireframing</p>
-                    <p>User interface development </p>
-                    <div class="accordion">
-                        <div class="label">
-                            <img id="A" class="skill" src="./Images/AdobeXd.png">
-                            <img id="B" class="skill" src="./Images/figma.png">
-                            <img id="C" class="skill" src="./Images/AdobeIlustrator.png">
-                            <img id="D" class="skill" src="./Images/AdobePhotoshop-1.png">
-                            <img id="E" class="skill" src="./Images/AdobePremierPro.png">
-                            <img id="F" class="skill" src="./Images/AdobeAfterEffects-2.png">
-                            <img id="G" class="skill" src="./Images/SolidWorks.png">
-                            <img id="H" class="skill" src="./Images/Fusion 360.png">
-                            <p class="smalltext">To see examples of particualr skills, please select one software
-                                icons
-                                above.</p>
-                            <div class="examples">
-                                <div class="XD">
-                                    <dl>
-                                        <dt><a href="#">Project 1</a></dt>
-                                        <dt><a href="#">Project 2</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="figma">
-                                    <dl>
-                                        <dt><a href="#">Project 3</a></dt>
-                                        <dt><a href="#">Project 4</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="iL">
-                                    <dl>
-                                        <dt><a href="#">Project 5</a></dt>
-                                        <dt><a href="#">Project 6</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="Ps">
-                                    <dl>
-                                        <dt><a href="#">Project 7</a></dt>
-                                        <dt><a href="#">Project 8</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="Pr">
-                                    <dl>
-                                        <dt><a href="#">Project 9</a></dt>
-                                        <dt><a href="#">Project 10</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="Ae">
-                                    <dl>
-                                        <dt><a href="#">Project 11</a></dt>
-                                        <dt><a href="#">Project 12</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="SolidWorks">
-                                    <dl>
-                                        <dt><a href="#">Project 13</a></dt>
-                                        <dt><a href="#">Project 14</a></dt>
-                                    </dl>
-                                </div>
-                                <div class="fusion">
-                                    <dl>
-                                        <dt><a href="#">Project 15</a></dt>
-                                        <dt><a href="#">Project 16</a></dt>
-                                    </dl>
-                                </div>
-                            </div>
-
+                <img class="Industrialarrow" src="./Images/industrialarrow.svg">
+            </ul>
+        </nav>
+    </header>
+    <section class="HeroPage">
+        <main>
+            <H2>Hi there</H2>
+            <p>Welcome to my website. </p>
+            <h4>My name is Tara,</h4>
+            <p>Multidisciplinary designer that specialises in industrial design and User experience. I am
+                passionate
+                about
+                creating beautifully useful designs that are made for the user. </p>
+            <h4>Skills Include...</h4>
+            <p>Human Centered Design Research.
+            <p>Concept development.</p>
+            <p>Visual prototyping and wireframing</p>
+            <p>User interface development </p>
+            <div class="accordion">
+                <div class="label">
+                    <img id="A" class="skill" src="./Images/AdobeXd.png">
+                    <img id="B" class="skill" src="./Images/figma.png">
+                    <img id="C" class="skill" src="./Images/AdobeIlustrator.png">
+                    <img id="D" class="skill" src="./Images/AdobePhotoshop-1.png">
+                    <img id="E" class="skill" src="./Images/AdobePremierPro.png">
+                    <img id="F" class="skill" src="./Images/AdobeAfterEffects-2.png">
+                    <img id="G" class="skill" src="./Images/SolidWorks.png">
+                    <img id="H" class="skill" src="./Images/Fusion 360.png">
+                    <p class="smalltext">To see examples of particualr skills, please select one software
+                        icons
+                        above.</p>
+                    <div class="examples">
+                        <div class="XD">
+                            <dl>
+                                <dt><a href="#">Project 1</a></dt>
+                                <dt><a href="#">Project 2</a></dt>
+                            </dl>
+                        </div>
+                        <div class="figma">
+                            <dl>
+                                <dt><a href="#">Project 3</a></dt>
+                                <dt><a href="#">Project 4</a></dt>
+                            </dl>
+                        </div>
+                        <div class="iL">
+                            <dl>
+                                <dt><a href="#">Project 5</a></dt>
+                                <dt><a href="#">Project 6</a></dt>
+                            </dl>
+                        </div>
+                        <div class="Ps">
+                            <dl>
+                                <dt><a href="#">Project 7</a></dt>
+                                <dt><a href="#">Project 8</a></dt>
+                            </dl>
+                        </div>
+                        <div class="Pr">
+                            <dl>
+                                <dt><a href="#">Project 9</a></dt>
+                                <dt><a href="#">Project 10</a></dt>
+                            </dl>
+                        </div>
+                        <div class="Ae">
+                            <dl>
+                                <dt><a href="#">Project 11</a></dt>
+                                <dt><a href="#">Project 12</a></dt>
+                            </dl>
+                        </div>
+                        <div class="SolidWorks">
+                            <dl>
+                                <dt><a href="#">Project 13</a></dt>
+                                <dt><a href="#">Project 14</a></dt>
+                            </dl>
+                        </div>
+                        <div class="fusion">
+                            <dl>
+                                <dt><a href="#">Project 15</a></dt>
+                                <dt><a href="#">Project 16</a></dt>
+                            </dl>
                         </div>
                     </div>
-                    <button>Let's Chat</button>
 
-                </main>
-                <aside>
-                    <div class="nested">
-                        <button id="resumeButton" class="pdf">Resumé</button>
-                        <button class="pdf">Portfolio</button>
-                    </div>
-                    <div><img class="Coverimage" src="./Images/Cover image.png"></div>
-
-                </aside>
-            </section>
-
-            <section class="footer">
-                <section class=Designskills>
-                    <div class="UserResearch">
-                        <div><img src="./Images/chat.png"></div>
-
-                        <h4 class="skillTitle">User Research</h4>
-                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-                            libero
-                            ullam
-                            nam ea velit mollitia
-                            repudiandae tempora repellendus quisquam ipsam sed, quae reprehenderit quaerat modi!
-                            Nesciunt
-                            numquam
-                            eaque ea laborum!</p>
-                        >>>>>>> 184bda40a7b3b5d3085a68be66266e8f8763eace
-
-                    </div>
-                    <div class="UserInterface">
-                        <div><img src="./Images/Actions - Controls - shrink-screen--filled - 24@2x.png"></div>
-                        <div>
-                            <h4 class="skillTitle">User interface Design</h4>
-                        </div>
-                        <div>
-                            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-                                libero
-                                ullam
-                                nam ea velit mollitia
-                                repudiandae tempora repellendus quisquam ipsam sed, quae reprehenderit quaerat modi!
-                                Nesciunt
-                                numquam
-                                eaque ea laborum!</p>
-                        </div>
-                    </div>
-                    <div class="Industrial">
-                        <div><img src="./Images/Toolset.png"></div>
-                        <h4 class="skillTitle">Industrial Design</h4>
-                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-                            libero ullam
-                            nam ea velit mollitia
-                            repudiandae tempora repellendus quisquam ipsam sed, quae reprehenderit quaerat modi!
-                            Nesciunt
-                            numquam
-                            eaque ea laborum!</p>
-                    </div>
-                </section>
-
-                <div class="socialmedia">
-                    <img class="sociallinks" src="./Images/Email.png" alt="My email">
-                    <img id="insta" class="sociallinks" src="./Images/instagram@2x.png" alt="My #Instagram">
-                    <img class="sociallinks" src="./Images/Linkedin.png" alt="my linked in">
                 </div>
-                <hr>
-                <p class="smalltext">© 2021 Tara Design Profile, Australia</p>
-                <p id="update" class="smalltext"> Update:21.09.2021</p>
-            </section>
+            </div>
+            <button>Let's Chat</button>
 
+        </main>
+        <aside>
+            <div class="nested">
+                <button id="resumeButton" class="pdf">Resumé</button>
+                <button class="pdf">Portfolio</button>
+            </div>
+            <div><img class="Coverimage" src="./Images/Cover image.png"></div>
+
+        </aside>
+    </section>
+
+    <section class="footer">
+        <section class=Designskills>
+            <div class="UserResearch">
+                <div><img src="./Images/chat.png"></div>
+
+                <h4 class="skillTitle">User Research</h4>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
+                    libero
+                    ullam
+                    nam ea velit mollitia
+                    repudiandae tempora repellendus quisquam ipsam sed, quae reprehenderit quaerat modi!
+                    Nesciunt
+                    numquam
+                    eaque ea laborum!</p>
+                >>>>>>> 184bda40a7b3b5d3085a68be66266e8f8763eace
+
+            </div>
+            <div class="UserInterface">
+                <div><img src="./Images/Actions - Controls - shrink-screen--filled - 24@2x.png"></div>
+                <div>
+                    <h4 class="skillTitle">User interface Design</h4>
+                </div>
+                <div>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
+                        libero
+                        ullam
+                        nam ea velit mollitia
+                        repudiandae tempora repellendus quisquam ipsam sed, quae reprehenderit quaerat modi!
+                        Nesciunt
+                        numquam
+                        eaque ea laborum!</p>
+                </div>
+            </div>
+            <div class="Industrial">
+                <div><img src="./Images/Toolset.png"></div>
+                <h4 class="skillTitle">Industrial Design</h4>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
+                    libero ullam
+                    nam ea velit mollitia
+                    repudiandae tempora repellendus quisquam ipsam sed, quae reprehenderit quaerat modi!
+                    Nesciunt
+                    numquam
+                    eaque ea laborum!</p>
+            </div>
+        </section>
+
+        <div class="socialmedia">
+            <img class="sociallinks" src="./Images/Email.png" alt="My email">
+            <img id="insta" class="sociallinks" src="./Images/instagram@2x.png" alt="My #Instagram">
+            <img class="sociallinks" src="./Images/Linkedin.png" alt="my linked in">
         </div>
-        <div class="loader">
+        <hr>
+        <p class="smalltext">© 2021 Tara Design Profile, Australia</p>
+        <p id="update" class="smalltext"> Update:21.09.2021</p>
+    </section>
+
+</div>
+<!-- <div class="loader">
             <div></div>
         </div>
-
         <script src="https://code.jquery.com/jquery-3.4.1.js"
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-        <script src="./index.js"></script>
+        <script src="./index.js"></script>-->
 </body>
 
 
